--- a/Morgan/Pages/Settings/SettingsPage.xaml
+++ b/Morgan/Pages/Settings/SettingsPage.xaml
@@ -21,7 +21,7 @@
                    Foreground="{StaticResource ForegroundLightBrush}"/>
 
             <TextBlock Text="S E T T I N G S"
-                   FontFamily="{StaticResource CalibriLight}"
+                   FontFamily="{StaticResource RobotoLight}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontSize="30"
