--- a/Morgan/Styles/TextFields.xaml
+++ b/Morgan/Styles/TextFields.xaml
@@ -10,7 +10,7 @@
         <Setter Property="Padding" Value="6"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundLightBrush}"/>
         <Setter Property="FontSize" Value="15"/>
-        <Setter Property="FontFamily" Value="{StaticResource CalibriRegular}"/>
+        <Setter Property="FontFamily" Value="{StaticResource RobotoRegular}"/>
 
         <Setter Property="Template">
             <Setter.Value>
