Changed the way the icon font is added.
Forced the Icon font to first check if the current system has the same font installed. If so, use the system font. And use the embedded font otherwise. This makes the designer load the icon font properly at design time.

This will be reverted prior to publish the source code!

--- a/Morgan/Styles/Fonts.xaml
+++ b/Morgan/Styles/Fonts.xaml
@@ -6,7 +6,7 @@
     <FontFamily x:Key="LatoThin">pack://application:,,,/Fonts/#Lato Thin</FontFamily>
     
     <!-- Icon Font -->
-    <FontFamily x:Key="Ionicons">pack://application:,,,/Fonts/#Ionicons</FontFamily>
+    <FontFamily x:Key="Ionicons">Ionicons, pack://application:,,,/Fonts/#Ionicons</FontFamily>
     
     <!-- Calibri Font -->
     <FontFamily x:Key="RobotoRegular">pack://application:,,,/Fonts/#Roboto Regular</FontFamily>
