--- a/Morgan/Pages/Home/HomePage.xaml
+++ b/Morgan/Pages/Home/HomePage.xaml
@@ -19,7 +19,8 @@
                 FontFamily="{StaticResource Ionicons}"
                 Foreground="{StaticResource ForegroundLightBrush}"
                 IsEnabled="{Binding HasLocation}"
-                FontSize="30"/>
+                FontSize="30"
+                Command="{Binding ListLocationsCommand}"/>
 
         <!-- Main content -->
         <StackPanel HorizontalAlignment="Center"
