Removed slide animation property classes and created one base animation that centralizes most of the stuff related to animations

--- a/Morgan/MainWindow.xaml
+++ b/Morgan/MainWindow.xaml
@@ -167,7 +167,7 @@
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
             Panel.ZIndex="10000"
-            local:SlideFromTopProperty.SlideInOutFromTop="{Binding MenuVisible, 
+            local:SlideFromTopAnimationProperty.Value="{Binding MenuVisible, 
                 Source={x:Static local:ViewModelBag.PopupMenuViewModel}}"/>
 
         <!-- This is the page hosting location -->
