Removed the Roboto Font!
Now the app uses the default font intalled on the current computer. By default, the font used on Windows is Segoe UI.

--- a/Morgan/Controls/PopupMenuControl.xaml
+++ b/Morgan/Controls/PopupMenuControl.xaml
@@ -22,7 +22,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     TextBlock.Foreground="{StaticResource ForegroundLightBrush}"
-                    TextBlock.FontFamily="{StaticResource RobotoLight}"
+                    TextBlock.FontWeight="Light"
                     TextBlock.FontSize="14">
 
             <!-- Main message -->
