--- a/Morgan/Pages/Home/ViewFilePage.xaml
+++ b/Morgan/Pages/Home/ViewFilePage.xaml
@@ -154,11 +154,14 @@
 
             </Grid>
 
+            <TextBlock Text="click the tag count buttons to edit specific tags"
+                       Foreground="{StaticResource ForegroundDarkBrush}"
+                       FontSize="13" Margin="0 4 0 0" Opacity=".7"/>
+
             <!-- Header Text -->
-            <TextBlock Text="Finally" FontSize="18" HorizontalAlignment="Left" Margin="0 30 0 10"/>
+            <TextBlock Text="Finally, let's organize!" FontSize="18" HorizontalAlignment="Left" Margin="0 30 0 10"/>
             <StackPanel Orientation="Horizontal">
-                <Button Content="Start organizing" Margin="0 0 5 0" Command="{Binding OrganizeCommand}"/>
-                <!--<Button Content="Edit tags" Style="{StaticResource SecondaryButton}" Command="{Binding EditCommand}"/>-->
+                <Button Content="START" Width="120" Margin="0 0 5 0" Command="{Binding OrganizeCommand}"/>
             </StackPanel>
 
         </StackPanel>
