--- a/Morgan/Pages/Home/ViewFilePage.xaml
+++ b/Morgan/Pages/Home/ViewFilePage.xaml
@@ -157,7 +157,7 @@
             <!-- Header Text -->
             <TextBlock Text="Finally" FontSize="18" HorizontalAlignment="Left" Margin="0 30 0 10"/>
             <StackPanel Orientation="Horizontal">
-                <Button Content="Start organizing" Margin="0 0 5 0" Command="{Binding OrganizeCommand}"/>
+                <Button Content="START" Width="120" Margin="0 0 5 0" Command="{Binding OrganizeCommand}"/>
                 <!--<Button Content="Edit tags" Style="{StaticResource SecondaryButton}" Command="{Binding EditCommand}"/>-->
             </StackPanel>
 
