--- a/Morgan/Pages/Home/ViewFilePage.xaml
+++ b/Morgan/Pages/Home/ViewFilePage.xaml
@@ -115,6 +115,7 @@
                     <Style TargetType="Button" x:Key="TagCountButtonStyle" BasedOn="{StaticResource TileButton}">
                         <Setter Property="Background" Value="#282828"/>
                         <Setter Property="Width" Value="100"/>
+                        <Setter Property="Foreground" Value="#FFCFCFCF"/>
                         <Setter Property="FontSize" Value="28"/>
                         <Setter Property="FontWeight" Value="Regular"/>
                         <Setter Property="Template">
@@ -138,6 +139,20 @@
                                         </Border>
                                     </Grid>
                                     <ControlTemplate.Triggers>
+                                        <EventTrigger RoutedEvent="MouseEnter">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation To="White" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                        <EventTrigger RoutedEvent="MouseLeave">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation To="#FFCFCFCF" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
                             </Setter.Value>
