--- a/Morgan/Styles/TextFields.xaml
+++ b/Morgan/Styles/TextFields.xaml
@@ -4,12 +4,13 @@
     
     <!-- Default Text Box Style -->
     <Style TargetType="{x:Type TextBox}">
-        <Setter Property="Background" Value="#303030"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BackgroundDarkBrush}"/>
-        <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="Padding" Value="6"/>
+        <Setter Property="Background" Value="{StaticResource BackgroundSemiDarkBrush}"/>
+        <Setter Property="BorderBrush" Value="Gray"/>
+        <Setter Property="BorderThickness" Value="0 0 0 2"/>
+        <Setter Property="Padding" Value="0 6 6 6"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundLightBrush}"/>
-        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="FontSize" Value="17"/>
+        <Setter Property="FontFamily" Value="Calibri"/>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -25,17 +26,44 @@
                                    FontFamily="{TemplateBinding FontFamily}"
                                    Padding="{TemplateBinding Padding}"
                                    Margin="2 0 0 0"
+                                   x:Name="placeholder"
                                    Foreground="Gray"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
                                 <TextBlock.Style>
                                     <Style TargetType="{x:Type TextBlock}">
-                                        <Setter Property="Visibility" Value="Collapsed" />
+                                        
+                                        <Style.Resources>
+                                            
+                                            <!-- Float to top animation -->
+                                            <Storyboard x:Key="floatUpStoryboard">
+                                                <ThicknessAnimation To="0 -18 0 18" Duration="0:0:0.2" Storyboard.TargetProperty="Margin"/>
+                                                <DoubleAnimation To="12" Duration="0:0:0.2" Storyboard.TargetProperty="FontSize"/>
+                                                <DoubleAnimation To="12" Duration="0:0:0.2" Storyboard.TargetProperty="FontSize"/>
+                                                <ColorAnimation To="{StaticResource ColorPrimary}" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                            </Storyboard>
+
+                                            <!-- Float back animation -->
+                                            <Storyboard x:Key="floatDownStoryboard">
+                                                <ThicknessAnimation To="0" Duration="0:0:0.2" Storyboard.TargetProperty="Margin"/>
+                                                <DoubleAnimation To="17" Duration="0:0:0.2" Storyboard.TargetProperty="FontSize"/>
+                                                <DoubleAnimation To="17" Duration="0:0:0.2" Storyboard.TargetProperty="FontSize"/>
+                                                <ColorAnimation To="Gray" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                            </Storyboard>
+                                        
+                                        </Style.Resources>
+                                        
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}" Value="">
-                                                <Setter Property="Visibility" Value="Visible" />
+                                                <DataTrigger.EnterActions>
+                                                    <BeginStoryboard Storyboard="{StaticResource floatDownStoryboard}"/>
+                                                </DataTrigger.EnterActions>
+                                                <DataTrigger.ExitActions>
+                                                    <BeginStoryboard Storyboard="{StaticResource floatUpStoryboard}"/>
+                                                </DataTrigger.ExitActions>
                                             </DataTrigger>
                                         </Style.Triggers>
+                                        
                                     </Style>
                                 </TextBlock.Style>
                             </TextBlock>
