--- a/Morgan/Controls/SettingsFormControl.xaml
+++ b/Morgan/Controls/SettingsFormControl.xaml
@@ -20,7 +20,7 @@
             <Button Content=""
                     Style="{StaticResource IconButton}"
                     HorizontalAlignment="Left"
-                    Padding="15,10"
+                    Padding="15,10" Margin="5 0 0 0"
                     Command="{Binding ToggleFormVisibilityCommand}"/>
 
             <!-- Head text -->
@@ -41,10 +41,15 @@
 
             <TextBlock Text="Location" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22"/>
             <TextBox Tag="Location to store the music files" Margin="0 10 0 15"
-                     local:TextBoxAttachedProperties.FocusControlOnLoad="True"/>
+                     local:TextBoxAttachedProperties.FocusControlOnLoad="True"
+                     Text="{Binding SaveFilePath}"/>
 
             <TextBlock Text="Hierachy" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22" Margin="0 15 0 10"/>
-            <TextBox Tag="Hierachy of the tags to make the structure"/>
+            <TextBox Tag="Hierachy of the tags to make the structure"
+                     Text="{Binding FileStructure}"/>
+
+            <Button Content="ORGANIZE" HorizontalAlignment="Left" Style="{StaticResource SecondaryButton}"
+                    Margin="0 20 0 0" Command="{Binding OrganizeFilesCommand}"/>
 
         </StackPanel>
         
