--- a/Morgan/Controls/SettingsFormControl.xaml
+++ b/Morgan/Controls/SettingsFormControl.xaml
@@ -42,14 +42,14 @@
             <TextBlock Text="Location" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22"/>
             <TextBox Tag="Location to store the music files" Margin="0 10 0 15"
                      local:TextBoxAttachedProperties.FocusControlOnLoad="True"
-                     Text="{Binding SaveFilePath}"/>
+                     Text="{Binding DisplaySaveFilePath}"/>
 
             <TextBlock Text="Hierachy" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22" Margin="0 15 0 10"/>
             <TextBox Tag="Hierachy of the tags to make the structure"
-                     Text="{Binding FileStructure}"/>
+                     Text="{Binding DisplayFileStructure}"/>
 
-            <Button Content="ORGANIZE" HorizontalAlignment="Left" Style="{StaticResource SecondaryButton}"
-                    Margin="0 20 0 0" Command="{Binding OrganizeFilesCommand}"/>
+            <Button Content="SAVE" HorizontalAlignment="Left" Style="{StaticResource SecondaryButton}"
+                    Margin="0 20 0 0" Command="{Binding SaveStructureSettingsCommand}" Width="100"/>
 
         </StackPanel>
         
